--- a/index.html
+++ b/index.html
@@ -1,87 +1,321 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | [Challenge Name Here]</title>
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./assets/images/favicon-32x32.png"
+        />
+        <link rel="stylesheet" href="assets/css/style.css" />
+        <script src="assets/js/theme.js"></script>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+        <title>
+            Frontend Mentor | Social Media Dashboard With Theme Switcher Master
+        </title>
+    </head>
 
-  Social Media Dashboard
-  Total Followers: 23,004
+    <body>
+        <header>
+            <div class="title">
+                <h1>Social Media Dashboard</h1>
+                <p>Total Follower: 23,004</p>
+            </div>
+            <div class="switch-container">
+                <div class="switch-container__checkbox">
+                    <span class="dark-mode-text">Dark mode</span>
+                    <input
+                        type="checkbox"
+                        id="toggle"
+                        checked
+                        onclick="toggleTheme()"
+                    />
+                    <label for="toggle"></label>
+                    <div class="active-circle"></div>
+                </div>
+            </div>
+        </header>
 
-  Dark Mode
+        <section class="general-stats">
+            <article
+                class="card-container card-container--general card-container--facebook"
+            >
+                <ul class="card-content card-content--general">
+                    <li class="card-content__title">
+                        <img
+                            class="social-icon"
+                            src="assets/images/icon-facebook.svg"
+                            alt="facebook"
+                        />&nbsp;@nathanf
+                    </li>
+                    <li class="card-content__compteur">1987</li>
+                    <li class="card-content__followers">Followers</li>
+                    <li class="card-content__arrow">
+                        <img
+                            class="up-arrow"
+                            src="assets/images/icon-up.svg"
+                            alt="up"
+                        />&nbsp;12 Today
+                    </li>
+                </ul>
+            </article>
 
-  
+            <article
+                class="card-container card-container--general card-container--twitter"
+            >
+                <ul class="card-content card-content--general">
+                    <li class="card-content__title">
+                        <img
+                            class="social-icon"
+                            src="assets/images/icon-twitter.svg"
+                            alt="twitter"
+                        />&nbsp;@nathanf
+                    </li>
+                    <li class="card-content__compteur">1044</li>
+                    <li class="card-content__followers">Followers</li>
+                    <li class="card-content__arrow">
+                        <img
+                            class="up-arrow"
+                            src="assets/images/icon-up.svg"
+                            alt="up"
+                        />&nbsp;99 Today
+                    </li>
+                </ul>
+            </article>
 
-  @nathanf
-  1987
-  Followers
-  12 Today
+            <article
+                class="card-container card-container--general card-container--instagram"
+            >
+                <ul
+                    class="card-content card-content--general card-content__instagram"
+                >
+                    <li class="card-content__title">
+                        <img
+                            class="social-icon"
+                            src="assets/images/icon-instagram.svg"
+                            alt="instagram"
+                        />&nbsp;@realnathanf
+                    </li>
+                    <li class="card-content__compteur">11k</li>
+                    <li class="card-content__followers">Followers</li>
+                    <li class="card-content__arrow">
+                        <img
+                            class="up-arrow"
+                            src="assets/images/icon-up.svg"
+                            alt="up"
+                        />&nbsp;1099 Today
+                    </li>
+                </ul>
+            </article>
 
-  @nathanf
-  1044
-  Followers
-  99 Today
+            <article
+                class="card-container card-container--general card-container--youtube"
+            >
+                <ul class="card-content card-content--general">
+                    <li class="card-content__title">
+                        <img
+                            class="social-icon"
+                            src="assets/images/icon-youtube.svg"
+                            alt="twitter"
+                        />&nbsp;Nathan F.
+                    </li>
+                    <li class="card-content__compteur">8239</li>
+                    <li class="card-content__followers">Subscribers</li>
+                    <li class="card-content__arrow">
+                        <img
+                            class="up-arrow"
+                            src="assets/images/icon-up.svg"
+                            alt="up"
+                        />&nbsp;99 Today
+                    </li>
+                </ul>
+            </article>
+        </section>
 
-  @realnathanf
-  11k
-  Followers
-  1099 Today
+        <h2 class="overview-title">Overview - Today</h2>
 
-  Nathan F.
-  8239
-  Subscribers
-  144 Today
+        <section class="overview-stats">
+            <article class="card-container card-container--overview">
+                <div class="card-content card-content--grid">
+                    <p class="a">Page Views</p>
+                    <p class="b">87</p>
+                    <p class="c">
+                        <img
+                            class="social-icon"
+                            src="assets/images/icon-facebook.svg"
+                            alt="facebook"
+                        />
+                    </p>
+                    <p class="d">
+                        <img
+                            class="up-arrow"
+                            src="assets/images/icon-up.svg"
+                            alt="up"
+                        />&nbsp;3%
+                    </p>
+                </div>
+            </article>
 
+            <article class="card-container card-container--overview">
+                <div class="card-content card-content--grid">
+                    <p class="a">Like</p>
+                    <p class="b">52</p>
+                    <p class="c">
+                        <img
+                            class="social-icon"
+                            src="assets/images/icon-facebook.svg"
+                            alt="facebook"
+                        />
+                    </p>
+                    <p class="d">
+                        <img
+                            class="down-arrow"
+                            src="assets/images/icon-down.svg"
+                            alt="up"
+                        />&nbsp;2%
+                    </p>
+                </div>
+            </article>
 
+            <article class="card-container card-container--overview">
+                <div class="card-content card-content--grid">
+                    <p class="a">Like</p>
+                    <p class="b">5462</p>
+                    <p class="c">
+                        <img
+                            class="social-icon"
+                            src="assets/images/icon-instagram.svg"
+                            alt="instagram"
+                        />
+                    </p>
+                    <p class="d">
+                        <img
+                            class="up-arrow"
+                            src="assets/images/icon-up.svg"
+                            alt="up"
+                        />&nbsp;2257%
+                    </p>
+                </div>
+            </article>
 
-  Overview - Today
+            <article class="card-container card-container--overview">
+                <div class="card-content card-content--grid">
+                    <p class="a">Profile Views</p>
+                    <p class="b">52k</p>
+                    <p class="c">
+                        <img
+                            class="social-icon"
+                            src="assets/images/icon-instagram.svg"
+                            alt="instagram"
+                        />
+                    </p>
+                    <p class="d">
+                        <img
+                            class="up-arrow"
+                            src="assets/images/icon-up.svg"
+                            alt="up"
+                        />&nbsp;1375%
+                    </p>
+                </div>
+            </article>
 
-  Page Views
-  87
-  3%
+            <article class="card-container card-container--overview">
+                <div class="card-content card-content--grid">
+                    <p class="a">Retweets</p>
+                    <p class="b">117</p>
+                    <p class="c">
+                        <img
+                            class="social-icon"
+                            src="assets/images/icon-twitter.svg"
+                            alt="tweeter"
+                        />
+                    </p>
+                    <p class="d">
+                        <img
+                            class="up-arrow"
+                            src="assets/images/icon-up.svg"
+                            alt="up"
+                        />&nbsp;303%
+                    </p>
+                </div>
+            </article>
 
-  Likes
-  52
-  2%
+            <article class="card-container card-container--overview">
+                <div class="card-content card-content--grid">
+                    <p class="a">Likes</p>
+                    <p class="b">507</p>
+                    <p class="c">
+                        <img
+                            class="social-icon"
+                            src="assets/images/icon-twitter.svg"
+                            alt="tweeter"
+                        />
+                    </p>
+                    <p class="d">
+                        <img
+                            class="up-arrow"
+                            src="assets/images/icon-up.svg"
+                            alt="up"
+                        />&nbsp;553%
+                    </p>
+                </div>
+            </article>
 
-  Likes
-  5462
-  2257%
+            <article class="card-container card-container--overview">
+                <div class="card-content card-content--grid">
+                    <p class="a">Likes</p>
+                    <p class="b">107</p>
+                    <p class="c">
+                        <img
+                            class="social-icon"
+                            src="assets/images/icon-youtube.svg"
+                            alt="youtube"
+                        />
+                    </p>
+                    <p class="d">
+                        <img
+                            class="down-arrow"
+                            src="assets/images/icon-down.svg"
+                            alt="down"
+                        />&nbsp;19%
+                    </p>
+                </div>
+            </article>
 
-  Profile Views
-  52k
-  1375%
+            <article class="card-container card-container--overview">
+                <div class="card-content card-content--grid">
+                    <p class="a">Total Views</p>
+                    <p class="b">1407</p>
+                    <p class="c">
+                        <img
+                            class="social-icon"
+                            src="assets/images/icon-youtube.svg"
+                            alt="youtube"
+                        />
+                    </p>
+                    <p class="d">
+                        <img
+                            class="down-arrow"
+                            src="assets/images/icon-down.svg"
+                            alt="down"
+                        />&nbsp;12%
+                    </p>
+                </div>
+            </article>
+        </section>
 
-  Retweets
-  117
-  303%
-
-  Likes
-  507
-  553%
-
-  Likes
-  107
-  19%
-
-  Total Views
-  1407
-  12%
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+        <footer>
+            <div class="attribution">
+                Challenge by
+                <a
+                    href="https://www.frontendmentor.io?ref=challenge"
+                    target="_blank"
+                    >Frontend Mentor</a
+                >. Coded by <a href="#">Gwen Costet</a>.
+            </div>
+        </footer>
+    </body>
 </html>
