--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </li>
                     <li class="card-content__compteur">1987</li>
                     <li class="card-content__followers">Followers</li>
-                    <li class="card-content__arrow">
+                    <li class="card-content__arrow up-arrow">
                         <img
                             class="up-arrow"
                             src="assets/images/icon-up.svg"
@@ -76,7 +76,7 @@
                     </li>
                     <li class="card-content__compteur">1044</li>
                     <li class="card-content__followers">Followers</li>
-                    <li class="card-content__arrow">
+                    <li class="card-content__arrow up-arrow">
                         <img
                             class="up-arrow"
                             src="assets/images/icon-up.svg"
@@ -101,7 +101,7 @@
                     </li>
                     <li class="card-content__compteur">11k</li>
                     <li class="card-content__followers">Followers</li>
-                    <li class="card-content__arrow">
+                    <li class="card-content__arrow up-arrow">
                         <img
                             class="up-arrow"
                             src="assets/images/icon-up.svg"
@@ -124,12 +124,12 @@
                     </li>
                     <li class="card-content__compteur">8239</li>
                     <li class="card-content__followers">Subscribers</li>
-                    <li class="card-content__arrow">
+                    <li class="card-content__arrow down-arrow">
                         <img
-                            class="up-arrow"
-                            src="assets/images/icon-up.svg"
-                            alt="up"
-                        />&nbsp;99 Today
+                            class="down-arrow"
+                            src="assets/images/icon-down.svg"
+                            alt="down"
+                        />&nbsp;144 Today
                     </li>
                 </ul>
             </article>
@@ -149,7 +149,7 @@
                             alt="facebook"
                         />
                     </p>
-                    <p class="d">
+                    <p class="d up-arrow">
                         <img
                             class="up-arrow"
                             src="assets/images/icon-up.svg"
@@ -170,11 +170,11 @@
                             alt="facebook"
                         />
                     </p>
-                    <p class="d">
+                    <p class="d down-arrow">
                         <img
                             class="down-arrow"
                             src="assets/images/icon-down.svg"
-                            alt="up"
+                            alt="down"
                         />&nbsp;2%
                     </p>
                 </div>
@@ -191,7 +191,7 @@
                             alt="instagram"
                         />
                     </p>
-                    <p class="d">
+                    <p class="d up-arrow">
                         <img
                             class="up-arrow"
                             src="assets/images/icon-up.svg"
@@ -212,7 +212,7 @@
                             alt="instagram"
                         />
                     </p>
-                    <p class="d">
+                    <p class="d up-arrow">
                         <img
                             class="up-arrow"
                             src="assets/images/icon-up.svg"
@@ -233,7 +233,7 @@
                             alt="tweeter"
                         />
                     </p>
-                    <p class="d">
+                    <p class="d up-arrow">
                         <img
                             class="up-arrow"
                             src="assets/images/icon-up.svg"
@@ -254,7 +254,7 @@
                             alt="tweeter"
                         />
                     </p>
-                    <p class="d">
+                    <p class="d up-arrow">
                         <img
                             class="up-arrow"
                             src="assets/images/icon-up.svg"
@@ -275,7 +275,7 @@
                             alt="youtube"
                         />
                     </p>
-                    <p class="d">
+                    <p class="d down-arrow">
                         <img
                             class="down-arrow"
                             src="assets/images/icon-down.svg"
@@ -296,7 +296,7 @@
                             alt="youtube"
                         />
                     </p>
-                    <p class="d">
+                    <p class="d down-arrow">
                         <img
                             class="down-arrow"
                             src="assets/images/icon-down.svg"
